Fix gradiente schema: usa clipPath SVG inline invece di data URI
Approccio con url_encode/data URI non funzionava. Ora usa un SVG
nascosto nel DOM con clipPath + clipPathUnits=objectBoundingBox e
clip-path CSS sul div con classe .gradient per applicare il gradiente
dello schema colore.

Made-with: Cursor

--- a/assets/ms_divider.css
+++ b/assets/ms_divider.css
@@ -51,12 +51,9 @@ div.ms-divider__line {
 }
 
 .ms-divider__scheme-mask {
+  display: block;
   width: 100%;
   height: var(--ms-divider-height, 80px);
-  -webkit-mask-size: 100% 100%;
-  mask-size: 100% 100%;
-  -webkit-mask-repeat: no-repeat;
-  mask-repeat: no-repeat;
   background-attachment: local;
 }
 
